// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonGroup ButtonGroup 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 kmQbtL"
      width="500px"
    >
      <div
        class="ButtonGroup-xkz195-0 dtwRCO"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-AxmLO gXSYqH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup more button types 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 aJDrU"
      width="600px"
    >
      <div
        class="ButtonGroup-xkz195-0 dtwRCO"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-AxmLO gXSYqH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-fzozJi iomXmU"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-fzoLsD hbDbFs"
        >
          Button
        </button>
        <button
          class="IconicButton__WrapperButton-sc-1u3dojp-1 jsJEWy sc-fzpans cKJzHK"
        >
          <svg
            aria-hidden="true"
            class="sc-AxirZ jrPxI"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="menu"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </button>
        <button
          aria-label="Button"
          class="IconicButton__WrapperButton-sc-1u3dojp-1 jsJEWy sc-fzpans cKJzHK"
        >
          <svg
            aria-hidden="true"
            class="sc-AxirZ jrPxI"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="32px"
            icon="menu"
            p="half"
            viewBox="0 0 24 24"
            width="32px"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
          <p
            class="sc-AxhCb djnyhr"
            color="currentColor"
            font-size="16px"
          >
            Button
          </p>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup with alignment right 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 kmQbtL"
      width="500px"
    >
      <div
        class="ButtonGroup-xkz195-0 blsMJq"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-AxmLO gXSYqH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup with alignment spaced 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 kmQbtL"
      width="500px"
    >
      <div
        class="ButtonGroup-xkz195-0 hCnVmX"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr sc-AxmLO gXSYqH"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup wrapping buttons 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 hkwtTx"
    >
      <div
        class="ButtonGroup-xkz195-0 dtwRCO"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 uuGzP"
    >
      <div
        class="ButtonGroup-xkz195-0 blsMJq"
      >
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
        <button
          class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
        >
          Button
        </button>
      </div>
    </div>
  </div>
</div>
`;
